# m365-owa-cli

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: auth-capture.md  live-verification.md  release.md  schema.md
docs/research/: browser-token-extraction.md  refresh-token-renewal.md
scripts/: sanitize_owa_fixture.py  scan_dist_artifacts.py
specs/: README.md
specs/m365-owa-cli/: IMPLEMENTATION_PLAN.md  SPEC.md
specs/owacal-cli/: IMPLEMENTATION_PLAN.md  SPEC.md
src/m365_owa_cli/: __init__.py  auth.py  browser.py  capabilities.py  cli.py  config.py  errors.py  models.py  output.py  schemas.py
src/m365_owa_cli/owa/: __init__.py  client.py  endpoints.py  fixture_sanitize.py  normalize.py  requests.py  safety.py
src/owacal_cli/: __init__.py  auth.py  capabilities.py  cli.py  config.py  errors.py  models.py  output.py  schemas.py  time_ranges.py
src/owacal_cli/owa/: client.py  endpoints.py  fixture_sanitize.py  normalize.py  requests.py  safety.py
tests/: test_auth.py  test_auth_refresh.py  test_browser_token_response.py  test_cli_contract.py  test_docs_contract.py  test_errors.py  test_fixture_sanitize.py  test_normalize.py  test_owa_stubs.py  test_release_artifacts.py  test_schemas.py  test_time_ranges.py
tests/fixtures/owa/: README.md
tests/live/: __init__.py  conftest.py  test_auth_live.py  test_categories_live.py  test_events_live.py
