[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "owacal-cli"
version = "0.1.0"
description = "Agent-first CLI for Outlook on the web calendar endpoints"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]
pretty = [
  "rich>=13.7",
]

[project.scripts]
owacal-cli = "owacal_cli.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
