[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "m365-owa-cli"
version = "0.1.4"
description = "Agent-first CLI for Microsoft 365 Outlook on the web endpoints"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/okms/m365-owa-cli"
Repository = "https://github.com/okms/m365-owa-cli"
Issues = "https://github.com/okms/m365-owa-cli/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]
pretty = [
  "rich>=13.7",
]

[project.scripts]
m365-owa-cli = "m365_owa_cli.cli:app"

[tool.hatch.build.targets.sdist]
include = [
  "src/m365_owa_cli/**",
  "README.md",
  "pyproject.toml",
  "docs/schema.md",
  "docs/release.md",
]
exclude = [
  ".github/**",
  "AGENTS.md",
  "CLAUDE.md",
  "docs/research/**",
  "specs/**",
  "tests/**",
  "uv.lock",
  "dist/**",
  "build/**",
  "*.egg-info/**",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "live: opt-in tests that talk to a configured live OWA connection",
  "mutating: opt-in live tests that create and clean up synthetic OWA data",
]

[tool.ruff]
line-length = 100
target-version = "py311"
